# readit

./: .gitignore  Cargo.toml  README.md  ignore_rules.yaml
src/: config.rs  embeding_utils.rs  env.rs  file_utils.rs  ignore_rules.rs  language_extensions.rs  main.rs  openai_utils.rs  pooling.rs  prompt_string.rs  prompt_utils.rs  structs.rs
